--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@125,300;125,400;125,500;125,600;125,700;125,800;125,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
     <title>ibnuzakial</title>
 </head>
@@ -44,6 +43,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p>
                     </div>
                 </div>
+                <div class="layer"></div>
             </div>
             <!-- <div class="skills">
                 <h1>SKILLS</h1>
@@ -57,9 +57,9 @@
                     <div>
                         <div class="shadow"></div>
                         <div class="videos">
-                            <video><source src="./background/1.webm"></video>
-                            <video><source src="./background/1.webm"></video>
-                            <video><source src="./background/1.webm"></video>
+                            <video autoplay><source src="./background/1.webm"></video>
+                            <video autoplay><source src="./background/1.webm"></video>
+                            <video autoplay><source src="./background/1.webm"></video>
                             <video><source src="./background/1.webm"></video>
                         </div>
                     </div>
