--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="navbar">
+        <div class="nav"><a href="">© Code by Ibnu</a></div>
         <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href="">work</a></li>
-            <li><a href="">about</a></li>
-            <li><a href="">contact</a></li>
+            <li class="nav"><a href="">work</a></li>
+            <li class="nav"><a href="">about</a></li>
+            <li class="nav"><a href="">contact</a></li>
         </ul>
     </div>
     <div class="spotlight"></div>
