--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="nav"><a href="">© Code by Ibnu</a></div>
+        <div class="nav"><a href="#home">© Code by Ibnu</a></div>
         <ul>
-            <li class="nav"><a href="">work</a></li>
-            <li class="nav"><a href="">about</a></li>
-            <li class="nav"><a href="">contact</a></li>
+            <li class="nav"><a href="#about">about</a></li>
+            <li class="nav"><a href="#work">work</a></li>
+            <li class="nav"><a href="#contact">contact</a></li>
         </ul>
     </div>
     <div class="spotlight"></div>
     <div id="smooth-scroll-wrapper">
         <div class="container">
-            <div class="home parallax">
+            <div id="home">
                     <!-- <img src="/background/imgonline-com-ua-CompressToSize-kcFkYjkZG5I.webp" alt="" class="home-background parallax"> -->
                     <div class="title">
                         <h1>IBNU ZAKI .AL</h1>
@@ -29,7 +29,7 @@
                         <!-- <h3></h3> -->
                     </div>
             </div>
-            <div class="about">
+            <div id="about">
                 <!-- <img src="/background/imgonline-com-ua-CompressToSize-pGWCaA7it0B4Rakk.webp" alt="" class="about-background parallax"> -->
                 <div class="text3d-container">
                     <div>
@@ -52,7 +52,7 @@
             <div class="buffer-section">
                 <p>Dive Into My Work</p>
             </div>
-            <div class="work">
+            <div id="work">
                 <div class="video-container">
                     <div>
                         <div class="shadow"></div>
@@ -60,7 +60,6 @@
                             <video autoplay><source src="./background/1.webm"></video>
                             <video autoplay><source src="./background/1.webm"></video>
                             <video autoplay><source src="./background/1.webm"></video>
-                            <video><source src="./background/1.webm"></video>
                         </div>
                     </div>
                 </div>
@@ -80,14 +79,10 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
                         <a>More</a>
                     </div>
-                    <div>
-                        <h1>Porject1</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
-                        <a>More</a>
-                    </div>
                 </div>
             </div>
-            <div class="contact">
+            <div class="another-work"></div>
+            <div id="contact">
                 <h1>Let's Work Together!</h1>
                 <div>
                     <form action="" onsubmit="return validateForm()">
@@ -107,7 +102,7 @@
                     <div class="contact-info">
                         <div>zakiibnu723@gmail.com</div>
                         <div>(+62) 857 6217 4003</div>
-                    </div>o
+                    </div>
                 </div>
             </div>
         </div>
