--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                     </div>
                 </div>
             </div>
+            <!-- <svg xmlns='http://www.w3.org/2000/svg' version='1.1'><filter id='rgb-split'><feOffset in='SourceGraphic' dx='5' dy='2' result='layer-one' /><feComponentTransfer in='layer-one' result='red'><feFuncR type='identity' /><feFuncG type='discrete' tableValues='0' /><feFuncB type='discrete' tableValues='0' /></feComponentTransfer><feOffset in='SourceGraphic' dx='-2' dy='-2' result='layer-two' /><feComponentTransfer in='layer-two' result='cyan'><feFuncR type='discrete' tableValues='0' /><feFuncG type='identity' /><feFuncB type='identity' /></feComponentTransfer><feBlend in='red' in2='cyan' mode='screen' result='color-split' /><feComposite in='color-split' in2='SourceGraphic' operator='in' /></filter></svg>#rgb-split"); -->
+        </div>
+        <div class="glitch-transition">
+            <video muted><source src="./background/glitch_vfx.mp4"></video>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script> 
