--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wdth,wght@125,300;125,400;125,500;125,600;125,700;125,800;125,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="preloader.css">
     <link rel="stylesheet" href="style.css">
     <title>ibnuzakial</title>
 </head>
 <body>
+    <div class="glitch-transition">
+        <video muted><source src="./background/burn_sfx.webm"></video>
+    </div>
+    <div class="preloader">
+            <div class="dots-10"></div>
+            <p>Just a moment...</p>
+    </div>
     <div class="navbar">
         <div class="nav"><a href="#home">© Code by Ibnu</a></div>
         <ul>
@@ -106,9 +114,6 @@
                 </div>
             </div>
             <!-- <svg xmlns='http://www.w3.org/2000/svg' version='1.1'><filter id='rgb-split'><feOffset in='SourceGraphic' dx='5' dy='2' result='layer-one' /><feComponentTransfer in='layer-one' result='red'><feFuncR type='identity' /><feFuncG type='discrete' tableValues='0' /><feFuncB type='discrete' tableValues='0' /></feComponentTransfer><feOffset in='SourceGraphic' dx='-2' dy='-2' result='layer-two' /><feComponentTransfer in='layer-two' result='cyan'><feFuncR type='discrete' tableValues='0' /><feFuncG type='identity' /><feFuncB type='identity' /></feComponentTransfer><feBlend in='red' in2='cyan' mode='screen' result='color-split' /><feComposite in='color-split' in2='SourceGraphic' operator='in' /></filter></svg>#rgb-split"); -->
-        </div>
-        <div class="glitch-transition">
-            <video muted><source src="./background/burn_sfx.webm"></video>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script> 
