--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="glitch-transition">
-        <video muted><source src="./background/burn_sfx.webm"></video>
+        <video><source src="./background/burn_sfx.webm"></video>
     </div>
     <div class="preloader">
             <div class="dots-10"></div>
