--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div>
                         <div class="shadow"></div>
                         <div class="videos">
-                            <video autoplay><source src="./background/1.webm"></video>
+                            <img src="./background/lively-weather-img1.webp" alt="">
                             <video autoplay><source src="./background/1.webm"></video>
                             <video autoplay><source src="./background/1.webm"></video>
                         </div>
