--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <div class="shadow"></div>
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
-                            <video autoplay><source src="./background/1.webm"></video>
-                            <video autoplay><source src="./background/1.webm"></video>
-                            <video autoplay><source src="./background/1.webm"></video>
+                            <img src="./assets/project-1.jpeg">
+                            <img src="./assets/project-2.jpeg">
+<!--                             <video autoplay><source src="./background/1.webm"></video> -->
                         </div>
                     </div>
                 </div>
@@ -84,11 +84,11 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
                         <a>More</a>
                     </div>
-                    <div>
+<!--                     <div>
                         <h1>Porject1</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
                         <a>More</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="another-work"></div>
