--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <div class="text3d-container">
                     <div>
                         <h1>ABOUT</h1>
-                        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, tempora vitae similique optio blanditiis labore.</P>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p>
+                        <P>Hello there! I'm Ibnu, a passionate web designer and developer dedicated to crafting stunning and interactive websites. With expertise in HTML5, CSS3, JavaScript, and GSAP animation, I strive to elevate the online presence of businesses by creating visually captivating and user-friendly experiences. My mission is to assist businesses in enhancing the aesthetics and functionality of their websites, ensuring they leave a lasting impression on visitors.</P>
+<!--                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p> -->
                     </div>
-                    <div>
+<!--                     <div>
                         <h1>ABOUT</h1>
                         <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, tempora vitae similique optio blanditiis labore.</P>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="layer"></div>
             </div>
