--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <div class="shadow"></div>
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
-                            <img src="./assets/project-1.jpeg">
-                            <img src="./assets/project-2.jpeg">
+                            <img src="./assets/project-1.jpg">
+                            <img src="./assets/project-2.jpg">
 <!--                             <video autoplay><source src="./background/1.webm"></video> -->
                         </div>
                     </div>
