--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <div class="text3d-container">
                     <div>
                         <h1>ABOUT</h1>
-                        <P>Hello there! I'm Ibnu, a passionate web designer and developer dedicated to crafting stunning and interactive websites. With expertise in HTML5, CSS3, JavaScript, and GSAP animation, I strive to elevate the online presence of businesses by creating visually captivating and user-friendly experiences. My mission is to assist businesses in enhancing the aesthetics and functionality of their websites, ensuring they leave a lasting impression on visitors.</P>
+                        <P>Hello there! I'm Ibnu, a passionate web designer and developer dedicated to crafting stunning and interactive websites.</p> 
+                        <p>With expertise in HTML5, CSS3, JavaScript, and GSAP animation, I strive to elevate the online presence of businesses by creating visually captivating and user-friendly experiences.</p>
+                        <p>My mission is to assist businesses in enhancing the aesthetics and functionality of their websites, ensuring they leave a lasting impression on visitors.</P>
 <!--                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p> -->
                     </div>
 <!--                     <div>
@@ -75,14 +77,14 @@
                 </div>
                 <div class="project-detail-container">
                     <div>
-                        <h1>Porject1</h1>
+                        <h1>Web Application</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
-                        <a>More</a>
+                        <a src="https://lively-weather.vercel.app">View project >></a>
                     </div>
                     <div>
-                        <h1>Porject1</h1>
+                        <h1>Company Profile</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
-                        <a>More</a>
+                        <a src="https://ableton-nu.vercel.app/">View project >></a>
                     </div>
 <!--                     <div>
                         <h1>Porject1</h1>
