--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                     <div>
                         <h1>Web Application</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
-                        <a src="https://lively-weather.vercel.app">View project >></a>
+                        <a href="https://lively-weather.vercel.app">View project >></a>
                     </div>
                     <div>
                         <h1>Company Profile</h1>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
-                        <a src="https://ableton-nu.vercel.app/">View project >></a>
+                        <a href="https://ableton-nu.vercel.app/">View project >></a>
                     </div>
 <!--                     <div>
                         <h1>Porject1</h1>
