--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 <div class="project-detail-container">
                     <div>
                         <h1>Web Application</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
+                        <p>A real-time weather application capable of tracking global weather conditions. Utilizing API technology, you can monitor current and future weather forecasts for any location worldwide!</p>
                         <a href="https://lively-weather.vercel.app">View project >></a>
                     </div>
                     <div>
                         <h1>Company Profile</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident eum iure consectetur sequi esse nemo.</p>
+                        <p>LHere's an example of a company profile website that I've created, meticulously designed to showcase the essence and offerings of the company.</p>
                         <a href="https://ableton-nu.vercel.app/">View project >></a>
                     </div>
 <!--                     <div>
