--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div>
                         <h1>Company Profile</h1>
-                        <p>LHere's an example of a company profile website that I've created, meticulously designed to showcase the essence and offerings of the company.</p>
+                        <p>Here's an example of a company profile website that I've created, meticulously designed to showcase the essence and offerings of the company.</p>
                         <a href="https://ableton-nu.vercel.app/">View project >></a>
                     </div>
 <!--                     <div>
