--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <button type="submit">Submit</button>
                     </form>
                     <div class="contact-info">
-                        <div>zakiibnu723@gmail.com</div>
-                        <div>(+62) 857 6217 4003</div>
+                        <a href="mailto:zakiibnu723@gmail.com?subject=Hello&body=This is my message">zakiibnu723@gmail.com</a>
+                        <a href="https://wa.me/6285862174003?text=Hello!20%I20%am20%interested in your service">(+62) 857 6217 4003</a>
                     </div>
                 </div>
             </div>
