--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </form>
                     <div class="contact-info">
                         <a href="mailto:zakiibnu723@gmail.com?subject=Hello&body=This is my message">zakiibnu723@gmail.com</a>
-                        <a href="https://wa.me/6285862174003?text=Hello!20%I20%am20%interested in your service">(+62) 857 6217 4003</a>
+                        <a href="https://wa.me/6285862174003?text=Hello!%20I%20am%20interested in your service">(+62) 857 6217 4003</a>
                     </div>
                 </div>
             </div>
