--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="shadow"></div>
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
-                            <img src="./assets/project-1.jpg">
+                            <video muted autoplay="false"><source src="./assets/project-1.mp4" type="video/mp4"></video>
                             <img src="./assets/project-2.jpg">
 <!--                             <video autoplay><source src="./background/1.webm"></video> -->
                         </div>
