--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="glitch-transition">
-        <video opacity="0%" muted><source src="./background/burn_sfx.webm"></video>
+        <video hidden="true" muted><source src="./background/burn_sfx.webm"></video>
     </div>
     <div class="preloader">
             <div class="dots-10"></div>
