--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="glitch-transition">
-        <video hidden="true" muted><source src="./background/burn_sfx.webm"></video>
+<!--         <video hidden="true" muted><source src="./background/burn_sfx.webm"></video> -->
+        <video muted><source src="./background/burn_sfx.webm"></video>
     </div>
     <div class="preloader">
             <div class="dots-10"></div>
