--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <div>
                     <form action="" onsubmit="return validateForm()">
                         <label for="name">Name*</label>
-                        <input type="text" autocomplete="off" id="name-input">
+                        <input type="text" autocomplete="on" id="name-input">
                         <div class="alert" id="name-alert">Please enter your name</div>
                         
                         <label for="email">Email*</label>
-                        <input type="text" autocomplete="off" id="email-input">
+                        <input type="text" autocomplete="on" id="email-input">
                         <div class="alert" id="email-alert">Please enter your email</div>
     
                         <label for="message">Message (optional)</label>
