--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
                             <video muted autoplay="false"><source src="./assets/project-1.mp4" type="video/mp4"></video>
-                            <img src="./assets/project-2.jpg">
+                            <img src="https://flic.kr/p/fQSuXb">
+                            
+                            ./assets/project-2.jpg
 <!--                             <video autoplay><source src="./background/1.webm"></video> -->
                         </div>
                     </div>
