--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
                             <video muted autoplay="false"><source src="./assets/project-1.mp4" type="video/mp4"></video>
-                            <img src="https://flic.kr/p/fQSuXb">
+                            <a data-flickr-embed="true" data-context="true" href="https://www.flickr.com/photos/zenowai/9742039552/" title="Hall of Honor"><img src="https://live.staticflickr.com/7344/9742039552_8307359b26_b.jpg" width="1024" height="683" alt="Hall of Honor"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                             
                             ./assets/project-2.jpg
 <!--                             <video autoplay><source src="./background/1.webm"></video> -->
