--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                         <button type="submit">Submit</button>
                     </form>
                     <div class="contact-info">
-                        <a href="mailto:zakiibnu723@gmail.com?subject=Hello&body=This is my message"><img src="./assets/diagonal-arrow.png">zakiibnu723@gmail.com</a>
-                        <a href="https://wa.me/6285862174003?text=Hello!%20I%20am%20interested in your service"><img src="./assets/diagonal-arrow.png">(+62) 858 6217 4003</a>
+                        <a href="mailto:zakiibnu723@gmail.com?subject=Hello&body= Hello Ibnu! I am interested in your service"><img src="./assets/diagonal-arrow.png">zakiibnu723@gmail.com</a>
+                        <a href="https://wa.me/6285862174003?text=Hello%20Ibnu!%20I%20am%20interested in your service"><img src="./assets/diagonal-arrow.png">(+62) 858 6217 4003</a>
                     </div>
                 </div>
             </div>
