--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <!-- <img src="/background/imgonline-com-ua-CompressToSize-pGWCaA7it0B4Rakk.webp" alt="" class="about-background parallax"> -->
                 <div class="text3d-container">
                     <div>
-                        <h1>ABOUT</h1>
-                        <P>Hello there!<br> I'm Ibnu, a passionate web designer and developer dedicated to crafting stunning and interactive websites.</p> 
-                        <p>With expertise in HTML5, CSS3, JavaScript, and GSAP animation, I strive to elevate the online presence of businesses by creating visually captivating and user-friendly experiences.</p>
-                        <p>My mission is to assist businesses in enhancing the aesthetics and functionality of their websites, ensuring they leave a lasting impression on visitors.</P>
-<!--                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus consequatur delectus obcaecati non quae architecto voluptatem qui animi quod?</p> -->
+                      <h1>ABOUT</h1>
+                      <p>Hello!<br> I'm Ibnu, a web developer with a strong interest in building smart, modern, and user-centered web applications.</p>
+                      <p>I work across both frontend and backend, using technologies like React, Next.js, FastAPI, and PostgreSQL to deliver responsive and functional digital experiences.</p>
+                      <p>Currently, I'm also exploring how AI and machine learning can enhance web systems and bring more value to real-world applications.</p>
                     </div>
+
 <!--                     <div>
                         <h1>ABOUT</h1>
                         <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, tempora vitae similique optio blanditiis labore.</P>
@@ -130,3 +130,4 @@
 </body>
 <!-- <script src="path/to/gsap.min.js"></script> -->
 </html>
+
