--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="project-detail-container">
                     <div>
-                        <h1>Web Application</h1>
+                        <h1>Lively Weather</h1>
                         <p>A real-time weather application capable of tracking global weather conditions. Utilizing API technology, you can monitor current and future weather forecasts for any location worldwide!</p>
                         <a href="https://lively-weather.vercel.app">View project >></a>
                     </div>
@@ -130,4 +130,5 @@
 </body>
 <!-- <script src="path/to/gsap.min.js"></script> -->
 </html>
+
 
