--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                         <a href="https://lively-weather.vercel.app">View project >></a>
                     </div>
                     <div>
-                        <h1>Company Profile</h1>
-                        <p>Here's an example of a company profile website that I've created, meticulously designed to showcase the essence and offerings of the company.</p>
-                        <a href="https://ableton-nu.vercel.app/">View project >></a>
+                        <h1>Indonesia Energy Map</h1>
+                        <p>An interactive visualization tool that maps potential solar energy across Indonesia's provinces and districts. Features real-time data visualization, hierarchical navigation, and comprehensive energy statistics analysis.</p>
+                        <a href="https://solar-energy-map.vercel.app/">View project >></a>
                     </div>
 <!--                     <div>
                         <h1>Porject1</h1>
@@ -130,5 +130,6 @@
 </body>
 <!-- <script src="path/to/gsap.min.js"></script> -->
 </html>
+
 
 
