--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="videos">
 <!--                             <img src="./background/lively-weather-img1.webp" alt=""> -->
                             <video muted autoplay="false"><source src="./assets/project-1.mp4" type="video/mp4"></video>
-                            <img src="./assets/project-2.jpg" alt="">
+                            <img src="./assets/solar-energy-map.png" alt="">
                          
 <!--                             <video autoplay><source src="./background/1.webm"></video> -->
                         </div>
@@ -130,6 +130,7 @@
 </body>
 <!-- <script src="path/to/gsap.min.js"></script> -->
 </html>
+
 
 
 
